MIDDLE OF DEV NOT COMPILABLE - Almost completed SongInternalUpdater.   Made SongPart/SongPartImpl use normal equals()/hashCode().